--- a/main_nb.ipynb
+++ b/main_nb.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -35,178 +35,78 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>KEGG_reactions</th>\n",
-       "      <th>num_reactions</th>\n",
        "      <th>Reactant_pair</th>\n",
+       "      <th>KEGG_reactions</th>\n",
        "      <th>source</th>\n",
        "      <th>target</th>\n",
-       "      <th>MW</th>\n",
-       "      <th>W</th>\n",
-       "      <th>I</th>\n",
-       "      <th>Se</th>\n",
-       "      <th>P</th>\n",
-       "      <th>...</th>\n",
-       "      <th>S</th>\n",
-       "      <th>F</th>\n",
-       "      <th>Fe</th>\n",
-       "      <th>Mn</th>\n",
-       "      <th>Mg</th>\n",
-       "      <th>polymer</th>\n",
-       "      <th>mol_weight</th>\n",
-       "      <th>Degree Centrality</th>\n",
-       "      <th>PageRank</th>\n",
-       "      <th>total_molecules</th>\n",
+       "      <th>CAR</th>\n",
+       "      <th>RPAIR_main</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>R00104,R00118</td>\n",
-       "      <td>2</td>\n",
        "      <td>C00003_C00006</td>\n",
+       "      <td>R00104,R00118</td>\n",
        "      <td>C00003</td>\n",
        "      <td>C00006</td>\n",
-       "      <td>0.056768</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>79.978</td>\n",
-       "      <td>-0.001288</td>\n",
-       "      <td>-0.000245</td>\n",
-       "      <td>5</td>\n",
+       "      <td>-999.0</td>\n",
+       "      <td>True</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>R00104,R00118</td>\n",
-       "      <td>2</td>\n",
-       "      <td>C00003_C00006</td>\n",
+       "      <td>C00003_C00153</td>\n",
+       "      <td>R00102,R00555,R03447,R04074,R10629,R10633,R106...</td>\n",
        "      <td>C00003</td>\n",
-       "      <td>C00006</td>\n",
-       "      <td>0.056768</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>79.978</td>\n",
-       "      <td>-0.001288</td>\n",
-       "      <td>-0.000245</td>\n",
-       "      <td>5</td>\n",
+       "      <td>C00153</td>\n",
+       "      <td>-999.0</td>\n",
+       "      <td>True</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>R00114,R00134,R00146,R00205,R00216,R00243,R002...</td>\n",
-       "      <td>1357</td>\n",
-       "      <td>C00005_C00006</td>\n",
-       "      <td>C00005</td>\n",
-       "      <td>C00006</td>\n",
-       "      <td>0.000677</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>-1.008</td>\n",
-       "      <td>0.000586</td>\n",
-       "      <td>0.000114</td>\n",
-       "      <td>1</td>\n",
+       "      <td>C00003_C00301</td>\n",
+       "      <td>R00102</td>\n",
+       "      <td>C00003</td>\n",
+       "      <td>C00301</td>\n",
+       "      <td>-999.0</td>\n",
+       "      <td>True</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>R00119,R10631</td>\n",
-       "      <td>2</td>\n",
-       "      <td>C00153_C00006</td>\n",
-       "      <td>C00153</td>\n",
-       "      <td>C00006</td>\n",
-       "      <td>0.718128</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>3</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>622.294</td>\n",
-       "      <td>0.000234</td>\n",
-       "      <td>0.000057</td>\n",
-       "      <td>62</td>\n",
+       "      <td>C00003_C00455</td>\n",
+       "      <td>R00103,R00137</td>\n",
+       "      <td>C00003</td>\n",
+       "      <td>C00455</td>\n",
+       "      <td>-999.0</td>\n",
+       "      <td>True</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>R00119</td>\n",
-       "      <td>1</td>\n",
-       "      <td>C13051_C00006</td>\n",
-       "      <td>C13051</td>\n",
-       "      <td>C00006</td>\n",
-       "      <td>0.000659</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>-0.982</td>\n",
-       "      <td>0.000703</td>\n",
-       "      <td>0.000147</td>\n",
-       "      <td>3</td>\n",
+       "      <td>C00003_C00857</td>\n",
+       "      <td>R00189,R00257</td>\n",
+       "      <td>C00003</td>\n",
+       "      <td>C00857</td>\n",
+       "      <td>-999.0</td>\n",
+       "      <td>True</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>5 rows × 35 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "                                      KEGG_reactions  num_reactions  \\\n",
-       "0                                      R00104,R00118              2   \n",
-       "1                                      R00104,R00118              2   \n",
-       "2  R00114,R00134,R00146,R00205,R00216,R00243,R002...           1357   \n",
-       "3                                      R00119,R10631              2   \n",
-       "4                                             R00119              1   \n",
+       "   Reactant_pair                                     KEGG_reactions  source  \\\n",
+       "0  C00003_C00006                                      R00104,R00118  C00003   \n",
+       "1  C00003_C00153  R00102,R00555,R03447,R04074,R10629,R10633,R106...  C00003   \n",
+       "2  C00003_C00301                                             R00102  C00003   \n",
+       "3  C00003_C00455                                      R00103,R00137  C00003   \n",
+       "4  C00003_C00857                                      R00189,R00257  C00003   \n",
        "\n",
-       "   Reactant_pair  source  target        MW  W  I  Se  P  ...  S  F  Fe  Mn  \\\n",
-       "0  C00003_C00006  C00003  C00006  0.056768  0  0   0  1  ...  0  0   0   0   \n",
-       "1  C00003_C00006  C00003  C00006  0.056768  0  0   0  1  ...  0  0   0   0   \n",
-       "2  C00005_C00006  C00005  C00006  0.000677  0  0   0  0  ...  0  0   0   0   \n",
-       "3  C00153_C00006  C00153  C00006  0.718128  0  0   0  3  ...  0  0   0   0   \n",
-       "4  C13051_C00006  C13051  C00006  0.000659  0  0   0  0  ...  0  0   0   0   \n",
-       "\n",
-       "   Mg  polymer  mol_weight  Degree Centrality  PageRank  total_molecules  \n",
-       "0   0        0      79.978          -0.001288 -0.000245                5  \n",
-       "1   0        0      79.978          -0.001288 -0.000245                5  \n",
-       "2   0        0      -1.008           0.000586  0.000114                1  \n",
-       "3   0        0     622.294           0.000234  0.000057               62  \n",
-       "4   0        0      -0.982           0.000703  0.000147                3  \n",
-       "\n",
-       "[5 rows x 35 columns]"
+       "   target    CAR  RPAIR_main  \n",
+       "0  C00006 -999.0        True  \n",
+       "1  C00153 -999.0        True  \n",
+       "2  C00301 -999.0        True  \n",
+       "3  C00455 -999.0        True  \n",
+       "4  C00857 -999.0        True  "
       ]
      },
      "metadata": {},
@@ -236,23 +136,23 @@
        "      <th>id</th>\n",
        "      <th>formula</th>\n",
        "      <th>mol_weight</th>\n",
+       "      <th>Fe</th>\n",
+       "      <th>S</th>\n",
        "      <th>W</th>\n",
-       "      <th>I</th>\n",
-       "      <th>Se</th>\n",
        "      <th>P</th>\n",
-       "      <th>C</th>\n",
-       "      <th>Cl</th>\n",
-       "      <th>H</th>\n",
+       "      <th>Se</th>\n",
+       "      <th>R</th>\n",
+       "      <th>Mo</th>\n",
        "      <th>...</th>\n",
-       "      <th>Hg</th>\n",
-       "      <th>Br</th>\n",
+       "      <th>H</th>\n",
        "      <th>Ni</th>\n",
        "      <th>O</th>\n",
-       "      <th>S</th>\n",
        "      <th>F</th>\n",
-       "      <th>Fe</th>\n",
-       "      <th>Mn</th>\n",
-       "      <th>Mg</th>\n",
+       "      <th>Hg</th>\n",
+       "      <th>As</th>\n",
+       "      <th>I</th>\n",
+       "      <th>X</th>\n",
+       "      <th>N</th>\n",
        "      <th>polymer</th>\n",
        "    </tr>\n",
        "  </thead>\n",
@@ -268,12 +168,12 @@
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>2</td>\n",
+       "      <td>0</td>\n",
        "      <td>...</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
+       "      <td>2</td>\n",
        "      <td>0</td>\n",
        "      <td>1</td>\n",
+       "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
@@ -290,12 +190,11 @@
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>3</td>\n",
-       "      <td>10</td>\n",
        "      <td>0</td>\n",
-       "      <td>16</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
        "      <td>...</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
+       "      <td>16</td>\n",
        "      <td>0</td>\n",
        "      <td>13</td>\n",
        "      <td>0</td>\n",
@@ -303,6 +202,7 @@
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
+       "      <td>5</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -314,12 +214,11 @@
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>2</td>\n",
-       "      <td>21</td>\n",
        "      <td>0</td>\n",
-       "      <td>28</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
        "      <td>...</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
+       "      <td>28</td>\n",
        "      <td>0</td>\n",
        "      <td>14</td>\n",
        "      <td>0</td>\n",
@@ -327,6 +226,7 @@
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
+       "      <td>7</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -338,12 +238,11 @@
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>2</td>\n",
-       "      <td>21</td>\n",
        "      <td>0</td>\n",
-       "      <td>29</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
        "      <td>...</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
+       "      <td>29</td>\n",
        "      <td>0</td>\n",
        "      <td>14</td>\n",
        "      <td>0</td>\n",
@@ -351,6 +250,7 @@
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
+       "      <td>7</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -362,12 +262,11 @@
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>3</td>\n",
-       "      <td>21</td>\n",
        "      <td>0</td>\n",
-       "      <td>30</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
        "      <td>...</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
+       "      <td>30</td>\n",
        "      <td>0</td>\n",
        "      <td>17</td>\n",
        "      <td>0</td>\n",
@@ -375,6 +274,7 @@
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
+       "      <td>7</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -383,19 +283,19 @@
        "</div>"
       ],
       "text/plain": [
-       "       id        formula  mol_weight  W  I  Se  P   C  Cl   H  ...  Hg  Br  \\\n",
-       "0  C00001            H2O      18.016  0  0   0  0   0   0   2  ...   0   0   \n",
-       "1  C00002  C10H16N5O13P3     507.188  0  0   0  3  10   0  16  ...   0   0   \n",
-       "2  C00003  C21H28N7O14P2     664.444  0  0   0  2  21   0  28  ...   0   0   \n",
-       "3  C00004  C21H29N7O14P2     665.452  0  0   0  2  21   0  29  ...   0   0   \n",
-       "4  C00005  C21H30N7O17P3     745.430  0  0   0  3  21   0  30  ...   0   0   \n",
+       "       id        formula  mol_weight  Fe  S  W  P  Se  R  Mo  ...   H  Ni   O  \\\n",
+       "0  C00001            H2O      18.016   0  0  0  0   0  0   0  ...   2   0   1   \n",
+       "1  C00002  C10H16N5O13P3     507.188   0  0  0  3   0  0   0  ...  16   0  13   \n",
+       "2  C00003  C21H28N7O14P2     664.444   0  0  0  2   0  0   0  ...  28   0  14   \n",
+       "3  C00004  C21H29N7O14P2     665.452   0  0  0  2   0  0   0  ...  29   0  14   \n",
+       "4  C00005  C21H30N7O17P3     745.430   0  0  0  3   0  0   0  ...  30   0  17   \n",
        "\n",
-       "   Ni   O  S  F  Fe  Mn  Mg  polymer  \n",
-       "0   0   1  0  0   0   0   0        0  \n",
-       "1   0  13  0  0   0   0   0        0  \n",
-       "2   0  14  0  0   0   0   0        0  \n",
-       "3   0  14  0  0   0   0   0        0  \n",
-       "4   0  17  0  0   0   0   0        0  \n",
+       "   F  Hg  As  I  X  N  polymer  \n",
+       "0  0   0   0  0  0  0        0  \n",
+       "1  0   0   0  0  0  5        0  \n",
+       "2  0   0   0  0  0  7        0  \n",
+       "3  0   0   0  0  0  7        0  \n",
+       "4  0   0   0  0  0  7        0  \n",
        "\n",
        "[5 rows x 28 columns]"
       ]
@@ -405,19 +305,12 @@
     }
    ],
    "source": [
-    "pairs = pd.read_csv('data/curated_pairs.csv', index_col=0)\n",
+    "pairs = pd.read_csv('data/pairs_final.csv', index_col=0)\n",
     "display(pairs.head())\n",
     "\n",
     "cpds = pd.read_csv('data/compounds_final.csv', index_col=0)\n",
     "display(cpds.head())"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
