start getting an idea

--- a/notebooks/transformers.ipynb
+++ b/notebooks/transformers.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,6 +16,17 @@
     "from rdkit.Chem.Draw import IPythonConsole\n",
     "IPythonConsole.molSize = (800, 200)\n",
     "IPythonConsole.highlightByReactant = True\n",
+    "\n",
+    "def smi_tokenizer(smi):\n",
+    "    \"\"\"\n",
+    "    Tokenize a SMILES molecule or reaction\n",
+    "    \"\"\"\n",
+    "    import re\n",
+    "    pattern =  \"(\\[[^\\]]+]|Br?|Cl?|N|O|S|P|F|I|b|c|n|o|s|p|\\(|\\)|\\.|=|#|-|\\+|\\\\\\\\|\\/|:|~|@|\\?|>|\\*|\\$|\\%[0-9]{2}|[0-9])\"\n",
+    "    regex = re.compile(pattern)\n",
+    "    tokens = [token for token in regex.findall(smi)]\n",
+    "    assert smi == ''.join(tokens)\n",
+    "    return ' '.join(tokens)\n",
     "\n",
     "def visualize_chemical_reaction(reaction_smarts: str):\n",
     "    # Create a RDKit reaction object from reaction SMARTS string\n",
