--- a/notebooks/transformers.ipynb
+++ b/notebooks/transformers.ipynb
@@ -68,21 +68,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[Compound(135438594)]\n",
-      "C1C(NC(=CC1=CC=NCCC2=CC(=C(C=C2)O)O)C(=O)O)C(=O)O\n"
+      "[Compound(637511)]\n",
+      "C1=CC=C(C=C1)C=CC=O\n"
      ]
     }
    ],
    "source": [
     "import pubchempy as pcp\n",
-    "results = pcp.get_compounds('Miraxanthin-V', 'name')\n",
+    "results = pcp.get_compounds('Cinnamaldehyde', 'name')\n",
     "print(results)\n",
     "\n",
     "for compound in results:\n",
@@ -91,14 +91,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "4-[2-[2-(3,4-dihydroxyphenyl)ethylimino]ethylidene]-2,3-dihydro-1H-pyridine-2,6-dicarboxylic acid\n"
+      "piperidine-2-carboxylic acid\n"
      ]
     }
    ],
@@ -106,7 +106,7 @@
     "import pubchempy as pcp\n",
     "\n",
     "# Use the SMILES you provided\n",
-    "smiles = 'C1C(NC(=CC1=CC=NCCC2=CC(=C(C=C2)O)O)C(=O)O)C(=O)O'\n",
+    "smiles = 'O=C(O)C1CCCCN1'\n",
     "compounds = pcp.get_compounds(smiles, namespace='smiles')\n",
     "match = compounds[0]\n",
     "print(match.iupac_name)"
