--- a/main.ipynb
+++ b/main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -21,7 +21,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 30026/30026 [00:00<00:00, 292358.66it/s]\n"
+      "100%|██████████| 30026/30026 [00:00<00:00, 607375.87it/s]\n"
      ]
     },
     {
@@ -107,6 +107,31 @@
     "\n",
     "# print('Simple weighted shortes paths:')\n",
     "# paths = graph.simple_weighted_shortest_path(test_cases=pyminer_test, data=data, method='mol_weight')"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Save predicted paths"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "\n",
+    "directory = 'data/results'\n",
+    "\n",
+    "# Create the directory if it doesn't exist\n",
+    "if not os.path.exists(directory):\n",
+    "    os.makedirs(directory)\n",
+    "\n",
+    "paths.to_csv('data/results/predicted_paths.csv')"
    ]
   },
   {
@@ -673,7 +698,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.10"
+   "version": "3.10.6"
   },
   "orig_nbformat": 4
  },
