--- a/notebooks/lm_for_reactions.ipynb
+++ b/notebooks/lm_for_reactions.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -39,7 +39,7 @@
        "True"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -274,7 +274,26 @@
     "\n",
     "train_df.to_csv('USPTO_480k/train_df.csv')\n",
     "val_df.to_csv('USPTO_480k/val_df.csv')\n",
-    "test_df.to_csv('USPTO_480k/test_d.csv')"
+    "test_df.to_csv('USPTO_480k/test_df.csv')"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Load saved datasets"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train_df = pd.read_csv('USPTO_480k/train_df.csv',index_col=0)\n",
+    "val_df = pd.read_csv('USPTO_480k/val_df.csv',index_col=0)\n",
+    "test_df = pd.read_csv('USPTO_480k/test_d.csv',index_col=0)"
    ]
   },
   {
@@ -289,13 +308,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "168e794504b040779d0c723030451b99",
+       "model_id": "d17fdfbaea7c434c8156110ef4e976cf",
        "version_major": 2,
        "version_minor": 0
       },
@@ -305,6 +324,17 @@
      },
      "metadata": {},
      "output_type": "display_data"
+    },
+    {
+     "ename": "NameError",
+     "evalue": "name 'precursors_val' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[10], line 6\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[39mwith\u001b[39;00m \u001b[39mopen\u001b[39m(\u001b[39m'\u001b[39m\u001b[39mUSPTO_480k/src-val.txt\u001b[39m\u001b[39m'\u001b[39m, \u001b[39m'\u001b[39m\u001b[39mr\u001b[39m\u001b[39m'\u001b[39m) \u001b[39mas\u001b[39;00m f:\n\u001b[1;32m      4\u001b[0m     can_precursors_val \u001b[39m=\u001b[39m [canonicalize_smiles(line\u001b[39m.\u001b[39mstrip()\u001b[39m.\u001b[39mreplace(\u001b[39m'\u001b[39m\u001b[39m \u001b[39m\u001b[39m'\u001b[39m, \u001b[39m'\u001b[39m\u001b[39m'\u001b[39m)) \u001b[39mfor\u001b[39;00m line \u001b[39min\u001b[39;00m tqdm(f, total\u001b[39m=\u001b[39mtotal)]\n\u001b[0;32m----> 6\u001b[0m \u001b[39mfor\u001b[39;00m smiles, can_smiles \u001b[39min\u001b[39;00m \u001b[39mzip\u001b[39m(precursors_val, can_precursors_val):\n\u001b[1;32m      7\u001b[0m     \u001b[39mtry\u001b[39;00m:\n\u001b[1;32m      8\u001b[0m         \u001b[39massert\u001b[39;00m smiles \u001b[39m==\u001b[39m can_smiles\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'precursors_val' is not defined"
+     ]
     }
    ],
    "source": [
@@ -342,7 +372,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -355,7 +385,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "7418930282634844a1719d5fe064c096",
+       "model_id": "6873a1d3ac684f908c0178a25d41e6be",
        "version_major": 2,
        "version_minor": 0
       },
@@ -369,7 +399,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "52218bf0ce3e46929549216bbf0012d3",
+       "model_id": "5e1686ef1a6648c4a17235332934c850",
        "version_major": 2,
        "version_minor": 0
       },
@@ -390,7 +420,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "86a620c557e543eeb94d5f5eb978c309",
+       "model_id": "8cc6c02c5bd742a9a59557ea3cecdb9a",
        "version_major": 2,
        "version_minor": 0
       },
@@ -404,7 +434,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "bdf84f45a4d041178624508110dbbda9",
+       "model_id": "6acad7042173432c99de3797fe39aa6e",
        "version_major": 2,
        "version_minor": 0
       },
@@ -425,7 +455,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "64a499faed77490899fdda64c99c4a8a",
+       "model_id": "3f7f49c45e6e45c393d43a15e75483eb",
        "version_major": 2,
        "version_minor": 0
       },
@@ -439,7 +469,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c2378e6ef09a4a51b94f1561b250d0d7",
+       "model_id": "92470067d20c431ca03bd6137012ee1f",
        "version_major": 2,
        "version_minor": 0
       },
@@ -482,7 +512,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -509,7 +539,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -587,7 +617,7 @@
        "95600   C C ( C ) ( C ) c 1 c c c ( O C C ( = O ) N C ...  "
       ]
      },
-     "execution_count": 38,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
