--- a/retrosynthesis/transformer.ipynb
+++ b/retrosynthesis/transformer.ipynb
@@ -20,6 +20,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -116,6 +117,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -141,6 +143,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -167,6 +170,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -234,6 +238,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -241,6 +246,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -290,9 +296,9 @@
       " tensor([[21, 21, 20]])\n",
       "\n",
       "Embedding:\n",
-      " tensor([[[-1.0863, -0.2622,  0.6601,  0.7025,  2.2263],\n",
-      "         [-1.0863, -0.2622,  0.6601,  0.7025,  2.2263],\n",
-      "         [-0.6901,  0.2406,  1.4434,  1.9327,  0.2911]]],\n",
+      " tensor([[[ 1.0882,  0.9560,  0.0367, -0.0861,  0.1151],\n",
+      "         [ 1.0882,  0.9560,  0.0367, -0.0861,  0.1151],\n",
+      "         [ 0.7384,  0.3497,  0.2501,  1.5561, -0.6903]]],\n",
       "       grad_fn=<EmbeddingBackward0>)\n"
      ]
     }
@@ -307,6 +313,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -347,6 +354,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -444,6 +452,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -454,19 +463,7 @@
    "cell_type": "code",
    "execution_count": 13,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2023-07-01 18:27:36.414799: I tensorflow/core/platform/cpu_feature_guard.cc:193] This TensorFlow binary is optimized with oneAPI Deep Neural Network Library (oneDNN) to use the following CPU instructions in performance-critical operations:  AVX2 FMA\n",
-      "To enable them in other operations, rebuild TensorFlow with the appropriate compiler flags.\n",
-      "2023-07-01 18:27:38.153939: W tensorflow/compiler/xla/stream_executor/platform/default/dso_loader.cc:64] Could not load dynamic library 'libnvinfer.so.7'; dlerror: libnvinfer.so.7: cannot open shared object file: No such file or directory\n",
-      "2023-07-01 18:27:38.154090: W tensorflow/compiler/xla/stream_executor/platform/default/dso_loader.cc:64] Could not load dynamic library 'libnvinfer_plugin.so.7'; dlerror: libnvinfer_plugin.so.7: cannot open shared object file: No such file or directory\n",
-      "2023-07-01 18:27:38.154101: W tensorflow/compiler/tf2tensorrt/utils/py_utils.cc:38] TF-TRT Warning: Cannot dlopen some TensorRT libraries. If you would like to use Nvidia GPU with TensorRT, please make sure the missing libraries mentioned above are installed properly.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from tensorflow.keras.preprocessing.sequence import pad_sequences\n",
     "\n",
@@ -489,6 +486,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -497,7 +495,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -518,25 +516,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 1/10\n",
-      " 192/1126 [====>.........................] - ETA: 1:11 - loss: -103.7292 - accuracy: 0.0264"
+      "Epoch 1/10\n"
      ]
     },
     {
-     "name": "stderr",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\n",
-      "KeyboardInterrupt\n",
-      "\n"
+      "1126/1126 [==============================] - 24s 19ms/step - loss: -551.8012 - accuracy: 0.0186\n",
+      "Epoch 2/10\n",
+      "1126/1126 [==============================] - 21s 19ms/step - loss: -1604.1986 - accuracy: 0.0016\n",
+      "Epoch 3/10\n",
+      "1126/1126 [==============================] - 22s 19ms/step - loss: -2647.5198 - accuracy: 0.0012\n",
+      "Epoch 4/10\n",
+      "1126/1126 [==============================] - 21s 18ms/step - loss: -3690.0530 - accuracy: 0.0012\n",
+      "Epoch 5/10\n",
+      "1126/1126 [==============================] - 21s 19ms/step - loss: -4732.2407 - accuracy: 0.0012\n",
+      "Epoch 6/10\n",
+      "1126/1126 [==============================] - 21s 19ms/step - loss: -5774.6333 - accuracy: 0.0012\n",
+      "Epoch 7/10\n",
+      "1126/1126 [==============================] - 21s 19ms/step - loss: -6816.7842 - accuracy: 0.0012\n",
+      "Epoch 8/10\n",
+      "1126/1126 [==============================] - 21s 19ms/step - loss: -7859.2627 - accuracy: 0.0012\n",
+      "Epoch 9/10\n",
+      "1126/1126 [==============================] - 21s 19ms/step - loss: -8901.6660 - accuracy: 0.0012\n",
+      "Epoch 10/10\n",
+      "1126/1126 [==============================] - 21s 19ms/step - loss: -9943.9619 - accuracy: 0.0012\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<keras.callbacks.History at 0x7fb63902de40>"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -560,9 +583,64 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(1802, 198) (1802, 198)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Convert the source and target columns into numpy arrays\n",
+    "testX = np.array(test['source'].tolist())\n",
+    "testY = np.array(test['target'].tolist())\n",
+    "\n",
+    "print(testX.shape, testY.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'Embedding' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[18], line 17\u001b[0m\n\u001b[1;32m     14\u001b[0m     model\u001b[39m.\u001b[39madd(Dense(units\u001b[39m=\u001b[39mNUM_EMBEDDING, activation\u001b[39m=\u001b[39m\u001b[39m'\u001b[39m\u001b[39msoftmax\u001b[39m\u001b[39m'\u001b[39m))\n\u001b[1;32m     15\u001b[0m     \u001b[39mreturn\u001b[39;00m model\n\u001b[0;32m---> 17\u001b[0m model \u001b[39m=\u001b[39m define_model()\n\u001b[1;32m     18\u001b[0m \u001b[39m# Compile the model\u001b[39;00m\n\u001b[1;32m     19\u001b[0m model\u001b[39m.\u001b[39mcompile(loss\u001b[39m=\u001b[39m\u001b[39m'\u001b[39m\u001b[39msparse_categorical_crossentropy\u001b[39m\u001b[39m'\u001b[39m, optimizer\u001b[39m=\u001b[39m\u001b[39m'\u001b[39m\u001b[39madam\u001b[39m\u001b[39m'\u001b[39m, metrics\u001b[39m=\u001b[39m[\u001b[39m'\u001b[39m\u001b[39maccuracy\u001b[39m\u001b[39m'\u001b[39m])\n",
+      "Cell \u001b[0;32mIn[18], line 12\u001b[0m, in \u001b[0;36mdefine_model\u001b[0;34m()\u001b[0m\n\u001b[1;32m      9\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mdefine_model\u001b[39m():\n\u001b[1;32m     10\u001b[0m     \u001b[39m# Define the LSTM model\u001b[39;00m\n\u001b[1;32m     11\u001b[0m     model \u001b[39m=\u001b[39m Sequential()\n\u001b[0;32m---> 12\u001b[0m     model\u001b[39m.\u001b[39madd(Embedding(input_dim\u001b[39m=\u001b[39mNUM_EMBEDDING, output_dim\u001b[39m=\u001b[39mEMBEDDING_DIM, input_length\u001b[39m=\u001b[39mMAX_LENGTH))\n\u001b[1;32m     13\u001b[0m     model\u001b[39m.\u001b[39madd(LSTM(units\u001b[39m=\u001b[39mHIDDEN_UNITS))\n\u001b[1;32m     14\u001b[0m     model\u001b[39m.\u001b[39madd(Dense(units\u001b[39m=\u001b[39mNUM_EMBEDDING, activation\u001b[39m=\u001b[39m\u001b[39m'\u001b[39m\u001b[39msoftmax\u001b[39m\u001b[39m'\u001b[39m))\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'Embedding' is not defined"
+     ]
+    }
+   ],
    "source": [
     "# construct an \"Embedding layer\"\n",
     "EMBEDDING_DIM = 5\n",
@@ -587,7 +665,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -598,7 +676,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": null,
    "metadata": {
     "collapsed": true,
     "jupyter": {
@@ -672,7 +750,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.10"
+   "version": "3.10.6"
   }
  },
  "nbformat": 4,
