--- a/retrosynthesis/experimentation_wTransformers.ipynb
+++ b/retrosynthesis/experimentation_wTransformers.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -103,7 +103,7 @@
        "4                     Fc1cc2c(Cl)ncnc2cn1.NC1CCCCCC1  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -130,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -183,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -214,7 +214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -255,7 +255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -275,7 +275,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [
     {
@@ -319,7 +319,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -331,8 +331,16 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Tokenize and pad sequencing datasets"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -353,7 +361,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [
     {
@@ -374,21 +382,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 85,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'torch' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[1], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m trainX \u001b[39m=\u001b[39m torch\u001b[39m.\u001b[39mLongTensor(trainX)\n\u001b[1;32m      2\u001b[0m trainY \u001b[39m=\u001b[39m torch\u001b[39m.\u001b[39mLongTensor(trainY)\n\u001b[1;32m      4\u001b[0m tensor \u001b[39m=\u001b[39m trainX[\u001b[39m0\u001b[39m]\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'torch' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "trainX = torch.LongTensor(trainX)\n",
     "trainY = torch.LongTensor(trainY)\n",
@@ -418,75 +414,108 @@
     "\n",
     "linear_output = linear_layer(rnn_output)\n",
     "softmax = linear_output.softmax(dim=2)\n",
-    "log_softmax = linear_output.log_softmax(dim=2)\n",
-    "\n"
+    "log_softmax = linear_output.log_softmax(dim=2)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "torch.Size([198, 5])"
-      ]
-     },
-     "execution_count": 40,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 30,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "ValueError",
-     "evalue": "could not convert string to float: ''",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[30], line 8\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[39m# trainX = torch.LongTensor(trainX)\u001b[39;00m\n\u001b[1;32m      2\u001b[0m \u001b[39m# trainY = torch.LongTensor(trainY)\u001b[39;00m\n\u001b[1;32m      3\u001b[0m \n\u001b[1;32m      4\u001b[0m \u001b[39m# construct an \"Embedding layer\"\u001b[39;00m\n\u001b[1;32m      5\u001b[0m embedding_layer \u001b[39m=\u001b[39m nn\u001b[39m.\u001b[39mEmbedding(num_embeddings\u001b[39m=\u001b[39m\u001b[39m20\u001b[39m,\n\u001b[1;32m      6\u001b[0m                                embedding_dim\u001b[39m=\u001b[39m\u001b[39m5\u001b[39m)\n\u001b[0;32m----> 8\u001b[0m ([vocabulary\u001b[39m.\u001b[39;49mencode(trainY[\u001b[39m0\u001b[39;49m])])\n",
-      "File \u001b[0;32m~/metabolic-pathways/retrosynthesis/src/smiles_lstm/model/smiles_vocabulary.py:64\u001b[0m, in \u001b[0;36mVocabulary.encode\u001b[0;34m(self, tokens)\u001b[0m\n\u001b[1;32m     62\u001b[0m vocab_index \u001b[39m=\u001b[39m np\u001b[39m.\u001b[39mzeros(\u001b[39mlen\u001b[39m(tokens), dtype\u001b[39m=\u001b[39mnp\u001b[39m.\u001b[39mfloat32)\n\u001b[1;32m     63\u001b[0m \u001b[39mfor\u001b[39;00m i, token \u001b[39min\u001b[39;00m \u001b[39menumerate\u001b[39m(tokens):\n\u001b[0;32m---> 64\u001b[0m     vocab_index[i] \u001b[39m=\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_tokens[token]\n\u001b[1;32m     65\u001b[0m \u001b[39mreturn\u001b[39;00m vocab_index\n",
-      "\u001b[0;31mValueError\u001b[0m: could not convert string to float: ''"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "torch.Size([1, 198])\n",
+      "torch.Size([1, 198])\n"
      ]
     }
    ],
    "source": [
-    "\n",
-    "\n",
-    "\n",
-    "([vocabulary.encode(trainY[])])"
+    "print(tensor.shape)\n",
+    "print(log_softmax.sum(dim=2).shape)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 95,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "At time step 1, the generative model proposes ( as the most probable token and the correct token is O\n",
+      "At time step 2, the generative model proposes [N-] as the most probable token and the correct token is =\n",
+      "At time step 3, the generative model proposes [N-] as the most probable token and the correct token is C\n",
+      "At time step 4, the generative model proposes 1 as the most probable token and the correct token is (\n",
+      "At time step 5, the generative model proposes ( as the most probable token and the correct token is O\n",
+      "At time step 6, the generative model proposes ( as the most probable token and the correct token is )\n",
+      "At time step 7, the generative model proposes [N-] as the most probable token and the correct token is C\n",
+      "At time step 8, the generative model proposes [N-] as the most probable token and the correct token is N\n",
+      "At time step 9, the generative model proposes [N-] as the most probable token and the correct token is C\n",
+      "At time step 10, the generative model proposes 1 as the most probable token and the correct token is (\n",
+      "At time step 11, the generative model proposes [N-] as the most probable token and the correct token is =\n",
+      "At time step 12, the generative model proposes 1 as the most probable token and the correct token is O\n",
+      "At time step 13, the generative model proposes [Zn+] as the most probable token and the correct token is )\n",
+      "At time step 14, the generative model proposes [N-] as the most probable token and the correct token is c\n",
+      "At time step 15, the generative model proposes [N-] as the most probable token and the correct token is 1\n",
+      "At time step 16, the generative model proposes [N-] as the most probable token and the correct token is c\n",
+      "At time step 17, the generative model proposes 1 as the most probable token and the correct token is (\n",
+      "At time step 18, the generative model proposes 1 as the most probable token and the correct token is O\n",
+      "At time step 19, the generative model proposes C as the most probable token and the correct token is )\n",
+      "At time step 20, the generative model proposes c as the most probable token and the correct token is n\n",
+      "At time step 21, the generative model proposes [N-] as the most probable token and the correct token is c\n",
+      "At time step 22, the generative model proposes 1 as the most probable token and the correct token is (\n",
+      "At time step 23, the generative model proposes c as the most probable token and the correct token is -\n",
+      "At time step 24, the generative model proposes c as the most probable token and the correct token is c\n",
+      "At time step 25, the generative model proposes c as the most probable token and the correct token is 2\n",
+      "At time step 26, the generative model proposes [OH-] as the most probable token and the correct token is c\n",
+      "At time step 27, the generative model proposes [OH-] as the most probable token and the correct token is c\n",
+      "At time step 28, the generative model proposes [OH-] as the most probable token and the correct token is c\n",
+      "At time step 29, the generative model proposes [OH-] as the most probable token and the correct token is c\n",
+      "At time step 30, the generative model proposes 1 as the most probable token and the correct token is (\n",
+      "At time step 31, the generative model proposes 1 as the most probable token and the correct token is B\n",
+      "At time step 32, the generative model proposes C as the most probable token and the correct token is r\n",
+      "At time step 33, the generative model proposes [N-] as the most probable token and the correct token is )\n",
+      "At time step 34, the generative model proposes C as the most probable token and the correct token is c\n",
+      "At time step 35, the generative model proposes C as the most probable token and the correct token is 2\n",
+      "At time step 36, the generative model proposes c as the most probable token and the correct token is )\n",
+      "At time step 37, the generative model proposes ( as the most probable token and the correct token is n\n",
+      "At time step 38, the generative model proposes [Zn+] as the most probable token and the correct token is (\n",
+      "At time step 39, the generative model proposes [N-] as the most probable token and the correct token is C\n",
+      "At time step 40, the generative model proposes C as the most probable token and the correct token is c\n",
+      "At time step 41, the generative model proposes [N-] as the most probable token and the correct token is 2\n",
+      "At time step 42, the generative model proposes [OH-] as the most probable token and the correct token is c\n",
+      "At time step 43, the generative model proposes [OH-] as the most probable token and the correct token is c\n",
+      "At time step 44, the generative model proposes [OH-] as the most probable token and the correct token is c\n",
+      "At time step 45, the generative model proposes [OH-] as the most probable token and the correct token is c\n",
+      "At time step 46, the generative model proposes [OH-] as the most probable token and the correct token is c\n",
+      "At time step 47, the generative model proposes [N-] as the most probable token and the correct token is 2\n",
+      "At time step 48, the generative model proposes [OH-] as the most probable token and the correct token is )\n",
+      "At time step 49, the generative model proposes [OH-] as the most probable token and the correct token is c\n",
+      "At time step 50, the generative model proposes [N-] as the most probable token and the correct token is 1\n",
+      "At time step 51, the generative model proposes [N-] as the most probable token and the correct token is =\n",
+      "At time step 52, the generative model proposes [N-] as the most probable token and the correct token is O\n",
+      "At time step 53, the generative model proposes [N-] as the most probable token and the correct token is  \n"
+     ]
+    }
+   ],
+   "source": [
+    "most_probable_tokens = log_softmax.argmax(dim=2).flatten().tolist()\n",
+    "\n",
+    "# we now extract the max value in each tensor of the log-softmax output above and the corresponding token\n",
+    "for idx, (correct_token, most_probable_token) in enumerate(zip(smiles, most_probable_tokens)):\n",
+    "    print(f\"At time step {idx+1}, the generative model proposes {vocabulary.tokens()[most_probable_token]} as the most probable token and the correct token is {correct_token}\")"
+   ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "attachments": {},
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "## Make the model learn"
+   ]
   },
   {
    "cell_type": "code",
