--- a/retrosynthesis/transformer.ipynb
+++ b/retrosynthesis/transformer.ipynb
@@ -20,7 +20,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -117,7 +116,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -138,12 +136,10 @@
     "sys.path.append('src/')\n",
     "from smiles_lstm.model.smiles_vocabulary import SMILESTokenizer, Vocabulary, create_vocabulary\n",
     "\n",
-    "tk = SMILESTokenizer()\n",
-    "vocab = Vocabulary()"
+    "tk = SMILESTokenizer()"
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -170,7 +166,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -207,7 +202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -224,7 +219,7 @@
        "array([21., 21., 20.], dtype=float32)"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -238,7 +233,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -246,7 +240,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -254,7 +247,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -270,7 +262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -293,7 +285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -304,9 +296,9 @@
       " tensor([[21, 21, 20]])\n",
       "\n",
       "Embedding:\n",
-      " tensor([[[ 0.1534, -0.3632, -0.1740,  1.8087, -0.1279],\n",
-      "         [ 0.1534, -0.3632, -0.1740,  1.8087, -0.1279],\n",
-      "         [ 1.6083, -0.8310, -1.3849, -0.7949,  0.2275]]],\n",
+      " tensor([[[ 0.0657, -1.0427, -0.4655,  0.7849, -1.3317],\n",
+      "         [ 0.0657, -1.0427, -0.4655,  0.7849, -1.3317],\n",
+      "         [-0.1682, -2.7056,  0.4256,  1.3071,  0.6875]]],\n",
       "       grad_fn=<EmbeddingBackward0>)\n"
      ]
     }
@@ -322,7 +314,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -330,35 +322,7 @@
      "output_type": "stream",
      "text": [
       "torch.Size([1, 3, 5])\n",
-      "torch.Size([1, 3, 5])\n",
-      "torch.Size([1, 3, 20])\n",
-      "tensor([[[0.0742, 0.0401, 0.0410, 0.0523, 0.0651, 0.0588, 0.0472, 0.0356,\n",
-      "          0.0788, 0.0493, 0.0742, 0.0334, 0.0660, 0.0341, 0.0478, 0.0344,\n",
-      "          0.0509, 0.0434, 0.0397, 0.0338],\n",
-      "         [0.0770, 0.0397, 0.0425, 0.0506, 0.0670, 0.0565, 0.0466, 0.0366,\n",
-      "          0.0791, 0.0493, 0.0738, 0.0338, 0.0663, 0.0342, 0.0464, 0.0338,\n",
-      "          0.0491, 0.0440, 0.0403, 0.0332],\n",
-      "         [0.0665, 0.0439, 0.0417, 0.0549, 0.0586, 0.0675, 0.0510, 0.0323,\n",
-      "          0.0727, 0.0486, 0.0706, 0.0344, 0.0655, 0.0338, 0.0527, 0.0350,\n",
-      "          0.0509, 0.0455, 0.0398, 0.0340]]], grad_fn=<SoftmaxBackward0>)\n",
-      "tensor([[[-2.6014, -3.2175, -3.1939, -2.9500, -2.7316, -2.8341, -3.0533,\n",
-      "          -3.3361, -2.5405, -3.0096, -2.6011, -3.3979, -2.7184, -3.3784,\n",
-      "          -3.0409, -3.3710, -2.9770, -3.1381, -3.2272, -3.3879],\n",
-      "         [-2.5640, -3.2260, -3.1572, -2.9831, -2.7025, -2.8742, -3.0666,\n",
-      "          -3.3071, -2.5376, -3.0095, -2.6061, -3.3864, -2.7130, -3.3760,\n",
-      "          -3.0703, -3.3869, -3.0146, -3.1224, -3.2110, -3.4050],\n",
-      "         [-2.7108, -3.1250, -3.1766, -2.9030, -2.8365, -2.6955, -2.9753,\n",
-      "          -3.4330, -2.6210, -3.0249, -2.6506, -3.3693, -2.7254, -3.3879,\n",
-      "          -2.9434, -3.3512, -2.9784, -3.0900, -3.2233, -3.3816]]],\n",
-      "       grad_fn=<LogSoftmaxBackward0>)\n",
-      "Original SMILES string: CCBr\n",
-      "\n",
-      "The unique tokens are: \n",
-      "['$', '^', ' ', '#', '(', ')', '-', '.', '/', '1', '2', '3', '4', '5', '6', '7', '8', '9', '=', 'B', 'Br', 'C', 'Cl', 'F', 'I', 'N', 'O', 'P', 'S', '[B-]', '[BH-]', '[BH3-]', '[Br-]', '[C-]', '[C@@H]', '[C@@]', '[C@H]', '[C@]', '[Cl+3]', '[Cl-]', '[Cu]', '[Fe]', '[I+]', '[K]', '[Li]', '[Mg+]', '[Mg]', '[N+]', '[N-]', '[N@+]', '[NH+]', '[NH-]', '[NH2+]', '[NH3+]', '[NH4+]', '[O-]', '[OH-]', '[P+]', '[PH2]', '[PH4]', '[PH]', '[Pd]', '[Pt]', '[S+]', '[S-]', '[S@@]', '[S@]', '[SH]', '[Se]', '[SiH2]', '[SiH]', '[Si]', '[SnH]', '[Sn]', '[Zn+]', '[Zn]', '[n+]', '[n-]', '[nH]', '[s+]', '[se]', '\\\\', 'c', 'n', 'o', 's']\n",
-      "\n",
-      "At time step 1, the generative model proposes / as the most probable token and the correct token is C\n",
-      "At time step 2, the generative model proposes / as the most probable token and the correct token is C\n",
-      "At time step 3, the generative model proposes / as the most probable token and the correct token is B\n"
+      "torch.Size([1, 3, 5])\n"
      ]
     }
    ],
@@ -368,15 +332,38 @@
     "# let's run the embedding through the recurrent layer\n",
     "rnn_output, (hidden_state, cell_state) = recurrent_layer(embedding)\n",
     "\n",
-    "print(rnn_output.shape)\n",
-    "\n",
-    "\n",
-    "\n",
+    "print(rnn_output.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "torch.Size([1, 3, 86])\n",
+      "Softmax shape: torch.Size([1, 3, 86])\n",
+      "Log-Softmax shape: torch.Size([1, 3, 86])\n",
+      "Original SMILES string: CCBr\n",
+      "\n",
+      "The unique tokens are: \n",
+      "['$', '^', ' ', '#', '(', ')', '-', '.', '/', '1', '2', '3', '4', '5', '6', '7', '8', '9', '=', 'B', 'Br', 'C', 'Cl', 'F', 'I', 'N', 'O', 'P', 'S', '[B-]', '[BH-]', '[BH3-]', '[Br-]', '[C-]', '[C@@H]', '[C@@]', '[C@H]', '[C@]', '[Cl+3]', '[Cl-]', '[Cu]', '[Fe]', '[I+]', '[K]', '[Li]', '[Mg+]', '[Mg]', '[N+]', '[N-]', '[N@+]', '[NH+]', '[NH-]', '[NH2+]', '[NH3+]', '[NH4+]', '[O-]', '[OH-]', '[P+]', '[PH2]', '[PH4]', '[PH]', '[Pd]', '[Pt]', '[S+]', '[S-]', '[S@@]', '[S@]', '[SH]', '[Se]', '[SiH2]', '[SiH]', '[Si]', '[SnH]', '[Sn]', '[Zn+]', '[Zn]', '[n+]', '[n-]', '[nH]', '[s+]', '[se]', '\\\\', 'c', 'n', 'o', 's']\n",
+      "\n",
+      "At time step 1, the generative model proposes [n+] as the most probable token and the correct token is C\n",
+      "At time step 2, the generative model proposes [NH2+] as the most probable token and the correct token is C\n",
+      "At time step 3, the generative model proposes [C@] as the most probable token and the correct token is B\n"
+     ]
+    }
+   ],
+   "source": [
     "# initialize the linear layer\n",
     "# in_features = 5 as that is the hidden_size defined in the recurrent layer above\n",
     "# out_features = 20 as that is the size of the Vocabulary\n",
     "linear_layer = nn.Linear(in_features=5,\n",
-    "                         out_features=20)\n",
+    "                         out_features=NUM_EMBEDDING)\n",
     "\n",
     "linear_output = linear_layer(rnn_output)\n",
     "\n",
@@ -388,11 +375,11 @@
     "# recall the output from the linear layer has dimensions: (batch size) x (sequence length) x (vocabulary size)\n",
     "# therefore, dim=2 because we want to compute the softmax over the vocabulary to obtain a probability for each token\n",
     "softmax = linear_output.softmax(dim=2)\n",
-    "print(softmax)\n",
+    "print(f\"Softmax shape: {softmax.shape}\")\n",
     "\n",
     "# let's now show the log-softmax output\n",
     "log_softmax = linear_output.log_softmax(dim=2)\n",
-    "print(log_softmax)\n",
+    "print(f\"Log-Softmax shape: {log_softmax.shape}\")\n",
     "\n",
     "# log-softmax to token probabilities\n",
     "# recall our original SMILES \n",
@@ -408,6 +395,142 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# How Does The Model Learn?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "These are the token indices we would want our model to predict:\n",
+      "tensor([[21, 21, 20]])\n",
+      "\n",
+      "Recall the log-softmax output:\n",
+      "torch.Size([1, 3, 86])\n",
+      "\n",
+      "We will transpose the log-softmax tensor to have shape (batch size) x (vocabulary) x (sequence length):\n",
+      "torch.Size([1, 86, 3])\n",
+      "\n",
+      "The output tensor from negative log-likelihood is:\n",
+      "tensor([[4.4359, 4.4042, 4.5177]], grad_fn=<ViewBackward0>)\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# define the loss\n",
+    "loss = torch.nn.NLLLoss(reduction='none')\n",
+    "# recall the correct token indices of \"CCBr\" which was our original SMILES\n",
+    "print(f\"These are the token indices we would want our model to predict:\\n{numerical_indices_smi_sample}\\n\")\n",
+    "print(f\"Recall the log-softmax output:\\n{log_softmax.shape}\\n\")\n",
+    "print(f\"We will transpose the log-softmax tensor to have shape \\\n",
+    "(batch size) x (vocabulary) x (sequence length):\\n{log_softmax.transpose(1,2).shape}\\n\")\n",
+    "\n",
+    "print(f\"The output tensor from negative log-likelihood is:\\n{loss(log_softmax.transpose(1, 2), numerical_indices_smi_sample)}\\n\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "During backpropagation, we take the sum of the `Negative Log-Likehood` tensor to \"summarize\" the total loss associated with a given SMILES sequence:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([13.3578], grad_fn=<SumBackward1>)"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "loss(log_softmax.transpose(1, 2), numerical_indices_smi_sample).sum(dim=1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Model Training"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "class Dataset(torch.utils.data.Dataset):\n",
+    "    \"\"\"\n",
+    "    Custom PyTorch Dataset that takes a file containing \\n separated SMILES.\n",
+    "    \"\"\"\n",
+    "\n",
+    "    def __init__(self, smiles_list : list, vocabulary : Vocabulary,\n",
+    "                 tokenizer : SMILESTokenizer) -> None:\n",
+    "        self._vocabulary  = vocabulary\n",
+    "        self._tokenizer   = tokenizer\n",
+    "        self._smiles_list = list(smiles_list)\n",
+    "\n",
+    "    def __getitem__(self, i : int) -> torch.Tensor:\n",
+    "        smi     = self._smiles_list[i]\n",
+    "        tokens  = self._tokenizer.tokenize(smi)\n",
+    "        encoded = self._vocabulary.encode(tokens)\n",
+    "        return torch.tensor(encoded, dtype=torch.long)  # pylint: disable=E1102\n",
+    "\n",
+    "    def __len__(self) -> int:\n",
+    "        return len(self._smiles_list)\n",
+    "\n",
+    "    @staticmethod\n",
+    "    def collate_fn(encoded_seqs : list) -> torch.Tensor:\n",
+    "        \"\"\"\n",
+    "        Converts a list of encoded sequences into a padded tensor.\n",
+    "        \"\"\"\n",
+    "        max_length   = max([seq.size(0) for seq in encoded_seqs])\n",
+    "        collated_arr = torch.zeros(len(encoded_seqs),\n",
+    "                                   max_length,\n",
+    "                                   dtype=torch.long)  # padded with zeros\n",
+    "        for i, seq in enumerate(encoded_seqs):\n",
+    "            collated_arr[i, :seq.size(0)] = seq\n",
+    "        return collated_arr"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "benzene = 'c1ccccc'\n",
+    "# tokenize\n",
+    "benzene_tokenized = tk.tokenize(benzene)\n",
+    "# encode (obtain numerical token indices)\n",
+    "benzene_encoded = vocabulary.encode(benzene_tokenized)\n",
+    "# transform it into a tensor for collating\n",
+    "benzene_encoded = torch.tensor([benzene_encoded])\n",
+    "# collate\n",
+    "benzene_collated = Dataset.collate_fn(benzene_encoded)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -415,7 +538,13 @@
    "source": []
   },
   {
-   "attachments": {},
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -456,7 +585,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -554,7 +682,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -588,7 +715,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -1041,7 +1167,7 @@
    ],
    "source": [
     "pred = model.predict(testX)\n",
-    "pd.DataFrame(testX)"
+    "pd.DataFrame(pred)"
    ]
   },
   {
@@ -1419,7 +1545,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6"
+   "version": "3.11.2"
   }
  },
  "nbformat": 4,
